Project

General

Profile

Actions

Bug #19282

closed

RecoveryQueue::_recovered asserts out on OSD errors

Added by John Spray about 7 years ago. Updated about 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
Correctness/Safety
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

There's no good reason the OSD should ever give us errors in this case, but crashing out the MDS is definitely not the right response if it does.

Actions #1

Updated by John Spray about 7 years ago

  • Status changed from New to Fix Under Review
Actions #2

Updated by John Spray about 7 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF