mds: don't assert on read errors in RecoveryQueue

On reflection, an error here is much more likely to
be some kind of system/config error than it is
to be something wrong with a particular file's objects,
so do a rank-wide damaged() instead of inventing
a whole new type in DamageTable just for this.

Fixes: http://tracker.ceph.com/issues/19282
Signed-off-by: John Spray <john.spray@redhat.com>